Add ISM rollover policy for stateless indices (#471)
* Quickly patch gradle to include the index-management plugin in the run job

* Indexing policy

* Index policy and set up template

* Add ism index template

* Don't create a test index at startup

* Fix template loading

* Fix gradle checks

* Update last_updated_time

* Try various things

* Get plugin to build under OpenSearch 3.0.0

* Use the Index Management SPI

* spi implementation

* Small fixes

* Use the wazuh-alerts and wazuh-archives indices

* Try to read the index-management mappings from java

* Use enums for indices and template names

* Clean up code

* Use ClusterStateListener to run only on the manager node

* Remove clusterStateListener

* Implement strategy pattern

* Tidy up the strategy pattern implementation

* Add missing javadocs

* Improve enum description

* Revert changes to unrelated files

* Revert changes to unrelated files

* Update changelog

* Update tests

* Add tests

* Make IndexUtils not final and its methods not static

* Fix gradle check

* Add WazuhIndicesInitializerTests

* Add more unit tests

* Add javadocs

* Update policy to meet spec

* Handle ResourceAlreadyExists exception

* Use clusterService instead of routingTable to get the latest state

* Fix tests

* Replace test values with actual policy

* Update comments to reflect change from RoutingTable to ClusterService

* Fix changelog entry

* Remove warning suppression

* Add javadoc for indexPolicy

* Fix user and groups names

* Redesign indices creation (#497)

* Add new design for indices creation

Created hierarchy of different index types. Currently 3 subtypes exist: IndexManagmentIndex, StateIndex and StreamIndex.

* Add javadocs

* Fix ISM index initialization

Index templates are not applied to the index for some reason, so we need to apply the mappings and the settings explictly during the index creation.

* Add IndexStateManagement class tests

* Add tests for Index class

* Add tests for StreamIndex cl