@@ -19,6 +19,7 @@ package com.wazuh.setup;
 import org.opensearch.cluster.metadata.IndexNameExpressionResolver;
 import org.opensearch.cluster.node.DiscoveryNode;
 import org.opensearch.cluster.service.ClusterService;
+import org.opensearch.common.unit.TimeValue;
 import org.opensearch.core.common.io.stream.NamedWriteableRegistry;
 import org.opensearch.core.xcontent.NamedXContentRegistry;
 import org.opensearch.env.Environment;
@@ -31,11 +32,18 @@ import org.opensearch.threadpool.ThreadPool;
 import org.opensearch.transport.client.Client;
 import org.opensearch.watcher.ResourceWatcherService;
 
+import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
+import java.util.concurrent.TimeUnit;
 import java.util.function.Supplier;
 
-import com.wazuh.setup.index.WazuhIndices;
+import com.wazuh.setup.index.Index;
+import com.wazuh.setup.index.IndexStateManagement;
+import com.wazuh.setup.index.StateIndex;
+import com.wazuh.setup.index.StreamIndex;
+import com.wazuh.setup.utils.IndexUtils;
 
 /**
  * Main class of the Indexer Setup plugin. This plugin is responsible for the creation of the index
@@ -43,7 +51,8 @@ import com.wazuh.setup.index.WazuhIndices;
  */
 public class SetupPlugin extends Plugin implements ClusterPlugin {
 
-    private WazuhIndices indices;
+    public static final TimeValue TIMEOUT = new TimeValue(5L, TimeUnit.SECONDS);
+    private final List<Index> indices = new ArrayList<>();
 
     /** Default constructor */
     public SetupPlugin() {}
@@ -61,13 +70,48 @@ public class SetupPlugin extends Plugin implements ClusterPlugin {
             NamedWriteableRegistry namedWriteableRegistry,
             IndexNameExpressionResolver indexNameExpressionResolver,
             Supplier<RepositoriesService> repositoriesServiceSupplier) {
-        this.indices = new WazuhIndices(client, clusterService);
+        // spotless:off
+        // ISM index
+        this.indices.add(new IndexStateManagement(".opendistro-ism-config", "opendistro-ism-config"));
+        // Stream indices
+        this.indices.add(new StreamIndex("wazuh-alerts-5.x-0001", "index-template-alerts", "wazuh-alerts"));
+        this.indices.add(new StreamIndex("wazuh-archives-5.x-0001", "index-template-archives", "wazuh-archives"));
+        // State indices
+        this.indices.add(new StateIndex("wazuh-states-fim-files", "index-template-fim-files"));
+        this.indices.add(new StateIndex("wazuh-monitoring", "index-template-monitoring"));
+        this.indices.add(new StateIndex("wazuh-statistics", "index-template-statistics"));
+        this.indices.add(new StateIndex("wazuh-states-fim-files", "index-template-fim-files"));
+        this.indices.add(new StateIndex("wazuh-states-fim-files", "index-template-fim-files"));
+        this.indices.add(new StateIndex("wazuh-states-fim-registries", "index-template-fim-registries"));
+        this.indices.add(new StateIndex("wazuh-states-inventory-hardware", "index-template-hardware"));
+        this.indices.add(new StateIndex("wazuh-states-inventory-hotfixes", "index-template-hotfixes"));
+        this.indices.add(new StateIndex("wazuh-states-inventory-interfaces", "index-template-interfaces"));
+        this.indices.add(new StateIndex("wazuh-states-inventory-networks", "index-template-networks"));
+        this.indices.add(new StateIndex("wazuh-states-inventory-packages", "index-template-packages"));
+        this.indices.add(new StateIndex("wazuh-states-inventory-ports", "index-template-ports"));
+        this.indices.add(new StateIndex("wazuh-states-inventory-processes", "index-template-processes"));
+        this.indices.add(new StateIndex("wazuh-states-inventory-protocols", "index-template-protocols"));
+        this.indices.add(new StateIndex("wazuh-states-inventory-system", "index-template-system"));
+        this.indices.add(new StateIndex("wazuh-states-vulnerabilities", "index-template-vulnerabilities"));
+        // spotless:on
 
-        return List.of(this.indices);
+        // Inject dependencies
+        IndexUtils utils = new IndexUtils();
+        this.indices.forEach(
+                index -> {
+                    index.setClient(client);
+                    index.setClusterService(clusterService);
+                    index.setIndexUtils(utils);
+                });
+
+        return Collections.emptyList();
     }
 
     @Override
     public void onNodeStarted(DiscoveryNode localNode) {
-        this.indices.initialize();
+        // Initialize the indices only if this node is the cluster manager node.
+        if (localNode.isClusterManagerNode()) {
+            this.indices.forEach(Index::initialize);
+        }
     }
 }
